--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -2,12 +2,50 @@
 
 * {
     font-family: 'Ubuntu', sans-serif;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
-nav {
-    background-color: rgb(82, 82, 82);
+.navbar-nav {
+    display: flex;
+    justify-content: right;
 }
 
-.nav-link {
+.navbar-collapse {
+    flex-grow: 0;
+}
+
+.navbar-nav a:last-child {
+    color: green;
+}
+
+.conferenceInfo {
+    height: 675px;
     color: white;
+    /* Acá intenté usar un carousel con las otras fotos de ba, pero me quedaba siempre el texto y la sombra abajo y no supe como arreglarlo, si es posible me gustaría poder recibir alguna resolución para resolverlo*/
+    background-image: url(../resources/ba1.jpg);
+    background-size: cover;
 }
+
+#shadowLayer {
+    background-color: rgba(0, 0, 0, 0.5);
+    width: 100%;
+    height: 100%;
+}
+
+.conferenceInfo .container-flex {
+    width: 80%;
+    height: 100%;
+    margin: 0 auto;
+    display: flex;
+    align-items: flex-end;
+    justify-content: flex-end;
+}
+
+.conferenceContent {
+    width: 50%;
+    text-align: right;
+    margin: 0 0 20% 0;
+}
+
