--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -187,3 +187,28 @@ h6 {
     border-radius: 5px;
     border: none;
 }
+
+/* Footer */
+
+.footer {
+    background-image: linear-gradient(to right, #1b263d, #273e6e);
+}
+
+.footer .footerContainer {
+    width: 90vw;
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.footerContainer a {
+    text-decoration: none;
+    color: whitesmoke;
+    width: 100px;
+    padding: 15px 0;
+    text-align: center;
+}
+
+/* Media Queries */
+
